Eliminates a bunch of warnings, mostly NPE related.